--- a/example/build.gradle
+++ b/example/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'com.github.Turskyi:BlockerLibrary:0.1.0'
+    def blocker_version = "0.1.0"
+    implementation "com.github.Turskyi:BlockerLibrary:$blocker_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
