--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,28 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file where adding configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.5.10'
+    ext {
+        // sdk versions
+        compile_sdk_version = 30
+        build_tools_version = "30.0.3"
+        min_sdk_version = 21
+        target_sdk_version = 30
+        // global dependency versions
+        kotlin_version = '1.5.21'
+        appcompat_version = "1.3.1"
+        retrofit_version = '2.9.0'
+        shared_preferences_version = "1.1.1"
+        junit_version = "4.13.2"
+        ext_junit_version = "1.1.3"
+        espresso_version = "3.4.0"
+        blocker_version = "1.0.1"
+    }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.android.tools.build:gradle:7.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
