--- a/blockerlibrary/build.gradle
+++ b/blockerlibrary/build.gradle
@@ -1,5 +1,8 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'maven-publish'
+}
 
 android {
     compileSdkVersion rootProject.compile_sdk_version
@@ -39,6 +42,8 @@ dependencies {
 
     // Shared Preferences
     implementation "androidx.preference:preference-ktx:$shared_preferences_version"
+
+
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
