--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         junit_version = "4.13.2"
         ext_junit_version = "1.1.3"
         espresso_version = "3.4.0"
-        blocker_version = "1.0.1"
+        blocker_version = "1.0.5"
     }
     repositories {
         google()
@@ -24,7 +24,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+//        adding the android-maven plugin
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
