--- a/example/build.gradle
+++ b/example/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion rootProject.target_sdk_version
         versionCode 1
         versionName rootProject.blocker_version
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -35,7 +35,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:$appcompat_version"
 
-    implementation "com.github.Turskyi:BlockerLibrary:$blocker_version"
+    implementation project(":blockerlibrary")
+    //NOTE: remove line above and uncomment line bellow in real project
+//    implementation "com.github.Turskyi:BlockerLibrary:$blocker_version"
+
+    implementation "androidx.multidex:multidex:$multidex_version"
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
