--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,9 @@ buildscript {
         junit_version = "4.13.2"
         ext_junit_version = "1.1.3"
         espresso_version = "3.4.0"
-        blocker_version = "1.0.1"
+        multidex_version = "2.0.1"
+
+        blocker_version = "1.0.7"
     }
     repositories {
         google()
