--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ua.turskyi.blockerlibrary">
+    package="ua.turskyi.blockerlibrary.example">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.AppCompat.Light">
         <!-- android:exported should be set true for main activity, or it won't launch -->
         <activity
-            android:name=".MainActivity"
+            android:name="ua.turskyi.blockerlibrary.example.MainActivity"
             android:exported="true"
             android:label="Blocker library">
             <intent-filter>
