--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         min_sdk_version = 21
         target_sdk_version = 30
         // global dependency versions
-        blocker_version = "1.0.9"
+        blocker_version = "1.1.0"
         kotlin_version = '1.5.21'
         appcompat_version = "1.3.1"
         retrofit_version = '2.9.0'
@@ -25,6 +25,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        adding the android-maven plugin
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
