--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ua.turskyi.blockerlibrary.example">
+    package="ua.turskyi.blockerlibrary">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
