--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,9 @@ buildscript {
         min_sdk_version = 21
         target_sdk_version = 30
         // global dependency versions
-        blocker_version = "1.1.5"
-        kotlin_version = '1.5.21'
+        version_code = 3
+        blocker_version = "1.1.6"
+        kotlin_version = '1.5.31'
         appcompat_version = "1.3.1"
         retrofit_version = '2.9.0'
         shared_preferences_version = "1.1.1"
@@ -23,7 +24,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 //        adding the android-maven plugin
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
