--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         <!-- android:exported should be set true for main activity, or it won't launch -->
         <activity
             android:name="ua.turskyi.blockerlibrary.example.MainActivity"
-            android:exported="true"
-            android:label="Blocker library">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
