--- a/blockerlibrary/build.gradle
+++ b/blockerlibrary/build.gradle
@@ -7,9 +7,12 @@ plugins {
 group = 'com.github.Turskyi'
 
 android {
+    //noinspection GroovyAssignabilityCheck
     compileSdkVersion rootProject.compile_sdk_version
+    //noinspection GroovyAssignabilityCheck
     buildToolsVersion rootProject.build_tools_version
 
+    //noinspection GroovyAssignabilityCheck
     defaultConfig {
         minSdkVersion rootProject.min_sdk_version
         targetSdkVersion rootProject.target_sdk_version
@@ -18,6 +21,7 @@ android {
         consumerProguardFiles 'consumer-rules.pro'
     }
 
+    //noinspection GroovyAssignabilityCheck
     buildTypes {
         release {
             minifyEnabled false
@@ -25,6 +29,7 @@ android {
                     'proguard-rules.pro'
         }
     }
+    //noinspection GroovyAssignabilityCheck
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
@@ -32,6 +37,7 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
+    namespace 'ua.turskyi.blockerlibrary'
 }
 
 dependencies {
@@ -56,7 +62,9 @@ afterEvaluate {
     publishing {
         publications {
             // Creates a Maven publication called "release".
+            //noinspection GroovyAssignabilityCheck
             release(MavenPublication) {
+                //noinspection GroovyAssignabilityCheck
                 from components.release
                 groupId = 'com.github.Turskyi'
                 artifactId = 'BlockerLibrary'
