--- a/build.gradle
+++ b/build.gradle
@@ -3,29 +3,29 @@
 buildscript {
     ext {
         // sdk versions
-        compile_sdk_version = 31
+        compile_sdk_version = 33
         build_tools_version = "30.0.3"
         min_sdk_version = 21
-        target_sdk_version = 30
+        target_sdk_version = 33
         // global dependency versions
-        kotlin_version = '1.6.21'
-        appcompat_version = "1.4.1"
+        kotlin_version = '1.7.20'
+        appcompat_version = "1.5.1"
         retrofit_version = '2.9.0'
         shared_preferences_version = "1.2.0"
         junit_version = "4.13.2"
-        ext_junit_version = "1.1.3"
-        espresso_version = "3.4.0"
+        ext_junit_version = "1.1.4"
+        espresso_version = "3.5.0"
         multidex_version = "2.0.1"
 
-        version_code = 5
-        blocker_version = "1.1.8"
+        version_code = 6
+        blocker_version = "1.2.0"
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 //        adding the android-maven plugin
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
@@ -42,6 +42,6 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean') {
     delete rootProject.buildDir
 }
