resolve duplicate lifecycle.viewmodel found in modules

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 // Top-level build file where adding configuration options common to all sub-projects/modules.
+apply plugin: 'maven-publish'
 
 buildscript {
     ext {
@@ -17,8 +18,8 @@ buildscript {
         espresso_version = "3.5.0"
         multidex_version = "2.0.1"
 
-        version_code = 6
-        blocker_version = "1.2.0"
+        version_code = 7
+        blocker_version = "1.2.1"
     }
     repositories {
         google()
@@ -44,4 +45,18 @@ allprojects {
 
 tasks.register('clean') {
     delete rootProject.buildDir
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'Turskyi'
+            artifactId = 'blockerlibrary'
+            version = "1.2.1"
+
+            pom {
+                description = 'Distance blocker for mobile apps'
+            }
+        }
+    }
 }
